--- a/_posts/2017-07-04-redis-src.md
+++ b/_posts/2017-07-04-redis-src.md
@@ -5,21 +5,25 @@ tags: redis redis-internal
 ---
 
 
-## Redis概览
+## Redis Overview
 
 <!-- more -->
 
-### Redis的优点
-支持众多的数据类型
-支持持久化
-支持"事件"
-支持多机、集群分布式
-支持发布与订阅
-支持事务
-支持嵌入Lua脚本
+### Advantages of Redis
 
-### 5种数据类型
-Redis支持5种数据类型，分别是字符串对象、列表对象、哈希对象、集合对象和有序集合对象。
+- Supports numerous data types
+- Supports persistence
+- Supports "events"
+- Supports multi-machine and cluster distribution
+- Supports publish and subscribe
+- Supports transactions
+- Supports embedded Lua scripts
+
+### 5 Data Types
+
+Redis supports 5 data types: string objects, list objects, hash objects, set objects, and sorted set objects.
+
+```
 127.0.0.1:6379> set name "xuwenzhi"
 OK
 127.0.0.1:6379> get name
@@ -27,80 +31,86 @@ OK
 127.0.0.1:6379> rpush numbers 1 2 3 4 5
 (integer) 5
 127.0.0.1:6379>
+```
 
-### 持久化
-RDB持久化
-AOF持久化
+### Persistence
 
-### 事件
-文件事件 : 动态响应客户端请求
-时间事件 : 用于常规的维护和管理操作保证Redis正常运行，包括一些定时的操作
+- RDB Persistence
+- AOF Persistence
 
-### 多机、集群分布式
-复制 : 服务器间的数据通信
-Sentinel : 监视服务器的运行状态以及故障转移的方法
-集群 : 节点之间的通信方法
+### Events
 
-### 发布与订阅
-PUBLISH
-SUBSCRIBE
-PUBSUB
+- File Events: Dynamically respond to client requests
+- Time Events: Used for routine maintenance and management operations to ensure Redis runs normally, including some scheduled operations
+
+### Multi-machine and Cluster Distribution
+
+- Replication: Data communication between servers
+- Sentinel: Methods for monitoring server running status and failover
+- Cluster: Communication methods between nodes
+
+### Publish and Subscribe
+
+- PUBLISH
+- SUBSCRIBE
+- PUBSUB
 
 
 ## SDS
 
-Redis中所有的字符串都使用了一个结构，叫做SDS(Simple Dynamic String)，比如K-V中的键值，或者V中复杂对象中使用的字符串都使用了SDS。
+All strings in Redis use a structure called SDS (Simple Dynamic String). For example, key-value pairs in K-V, or strings in complex objects within V, all use SDS.
 
 ```c
 sds.h/sdshdr
 /*
- * 保存字符串对象的结构
+ * Structure for storing string objects
  */
 struct sdshdr {
-    // buf 中已占用空间的长度
+    // Length of occupied space in buf
     int len;
-    // buf 中剩余可用空间的长度
+    // Length of remaining available space in buf
     int free;
-    // 数据空间
+    // Data space
     char buf[];
 };
 ```
 
-那么问题来了，为什么Redis不直接使用C语言中的字符串操作方式，还要在此基础上封装了层SDS呢？
+So the question is: Why doesn't Redis directly use C language's string manipulation method, but instead wraps it with SDS?
 
-### SDS的优势
-- 当要查询某个字符串中的某个字符时，无需像C中那样遍历，复杂度为O(1)，且获取字符串长度的时候相当快
-- 保证不会出现缓冲区溢出，比如当进行修改操作时，可以立刻通过free知道当前剩余空间是否能够执行修改而不会发生溢出现象
-- 增加了SDS之后，可以保证在频繁的拼接字符串导致的内存重分配操作，且通过free的透明度，可以实现Redis的空间预分配和惰性释放等特点。
-- 二进制安全，保证SDS可以处理二进制数据。
+### Advantages of SDS
 
-### 空间预分配 : 当对SDS进行修改时
+- When querying a character in a string, no need to traverse like in C; complexity is O(1), and getting string length is very fast
+- Ensures no buffer overflow. For example, during modification operations, you can immediately know through free whether there's enough remaining space to perform the modification without overflow
+- After adding SDS, memory reallocation operations caused by frequent string concatenation can be guaranteed, and through the transparency of free, Redis's space pre-allocation and lazy release features can be implemented
+- Binary safe, ensuring SDS can handle binary data
 
-- 当长度小于1M时，假如此时的len为13，那么会同时为free也申请13长度的大小，此时buf的长度为13+13+1
-- 当长度大于1M时，加入此时的len为30M，那么会同时为free申请1M，此时buf的长度为30M+1M+1byte（至于为什么为free申请1M，看这里#define SDS_MAX_PREALLOC (1024*1024)）
+### Space Pre-allocation: When Modifying SDS
+
+- When length is less than 1MB: if current len is 13, the same 13-length size is also allocated for free. At this time, buf length is 13+13+1
+- When length is greater than 1MB: if current len is 30MB, 1MB is allocated for free. At this time, buf length is 30M+1M+1byte (as for why 1MB is allocated for free, see #define SDS_MAX_PREALLOC (1024*1024))
 
 
 ## Redis Object
 
-Redis的对象系统并不是一个很新的东西，而是基于字符串对象、列表对象、哈希对象、集合对象和有序集合对象的基础上整合出的对象系统。比如创建一个简单的字符串对象时中的键值对，键和值都是一个Redis对象。
+The Redis object system is not something new but is an integrated object system based on string objects, list objects, hash objects, set objects, and sorted set objects. For example, when creating a simple string object, both the key and value in the key-value pair are Redis objects.
 
 ```c
 //redis.h/redisObject
 typedef struct redisObject {
-    // 类型
+    // Type
     unsigned type:4;
-    // 编码
+    // Encoding
     unsigned encoding:4;
-    // 对象最后一次被访问的时间
+    // Last access time of object
     unsigned lru:REDIS_LRU_BITS; /* lru time (relative to server.lruclock) */
-    // 引用计数
+    // Reference count
     int refcount;
-    // 指向实际值的指针
+    // Pointer to actual value
     void *ptr;
 } robj;
 ```
 
-type : 对象的类型，可选值为 REDIS_STRING、REDIS_LIST、REDIS_HASH、REDIS_SET和REDIS_ZSET等。可以通过TYPE命令来获得对象的类型。
+type: Object type. Possible values are REDIS_STRING, REDIS_LIST, REDIS_HASH, REDIS_SET, and REDIS_ZSET, etc. You can use the TYPE command to get the object type.
 
 ```
 127.0.0.1:6379> get name
@@ -128,283 +138,326 @@ zset
 
 ![http://img.xuwenzhi.com/redisbianmachangliang.jpg](http://img.xuwenzhi.com/redisbianmachangliang.jpg)
 
-ptr : 指向对象的底层实现数据结构，而由于Redis底层实现有很多种，还需要encoding成员来指定。下图为encoding的可选值及解释。
+ptr: Points to the underlying data structure implementation of the object. Since Redis has many different underlying implementations, the encoding member is also needed to specify. The following diagram shows the possible values and explanations for encoding.
+
 ![http://img.xuwenzhi.com/redistypeencoding.jpg](http://img.xuwenzhi.com/redistypeencoding.jpg)
 
-此时，Redis的对象结构体中，存在type和encoding两个元素来区分对象的不同，当这两个成员进行组合的时候，又可以组成更多种不同的对象，原因在于每种type的对象都至少使用了两种不同的encoding。
+At this point, the Redis object structure has type and encoding members to distinguish different objects. When these two members are combined, even more different objects can be composed, because each type of object uses at least two different encodings.
 
 
 # ListNode
 
-链表在Redis中的使用非常广泛，比如列表键的底层实现之一就是链表，其次还有发布与订阅、慢查询、监视器和通过链表来保存多个客户端的状态信息。
+Linked lists are used extensively in Redis. For example, one of the underlying implementations of list keys is linked lists. Additionally, publish/subscribe, slow queries, monitors, and multiple client state information are stored using linked lists.
 
-Redis链表的实现
+Redis Linked List Implementation
 
 ```c
 adlist.h/listNode
 /*
- * 双端链表节点
+ * Doubly linked list node
  */
 typedef struct listNode {
-    // 前置节点
+    // Previous node
     struct listNode *prev;
-    // 后置节点
+    // Next node
     struct listNode *next;
-    // 节点的值
+    // Node value
     void *value;
 } listNode;
 ```
 
-虽然listNode本身就可以实现链表的双端等功能，但Redis本身在使用链表时又对listNode进行了封装
+Although listNode itself can implement doubly linked list functionality, Redis wraps listNode when using linked lists:
 
 ```
 /*
- * 双端链表结构
+ * Doubly linked list structure
  */
 typedef struct list {
-    // 表头节点
+    // Head node
     listNode *head;
-    // 表尾节点
+    // Tail node
     listNode *tail;
-    // 节点值复制函数
+    // Node value copy function
     void *(*dup)(void *ptr);
-    // 节点值释放函数
+    // Node value release function
     void (*free)(void *ptr);
-    // 节点值对比函数
+    // Node value comparison function
     int (*match)(void *ptr, void *key);
-    // 链表所包含的节点数量
+    // Number of nodes in the list
     unsigned long len;
 } list;
 ```
 
-### 特点
-- 双端:取头和尾都是O(1)
-- 无环:头尾节点均指向NULL
-- 获取链表长度只需list.len
-- 多态:链表节点使用(void*)来保存节点值，保证链表可以存储不同类型的值
+### Characteristics
+
+- Doubly-ended: Getting head and tail are both O(1)
+- Acyclic: Both head and tail nodes point to NULL
+- Getting list length only requires list.len
+- Polymorphic: List nodes use (void*) to store node values, ensuring the list can store different types of values
 
 ## Integer Set
 
-当一个集合只包含整数值元素，并且数量不多时，Redis就会使用整数集合作为集合键的底层实现。
+When a set contains only integer value elements and the quantity is small, Redis uses an integer set as the underlying implementation of set keys.
 
 ```c
 //intset.h/intset
 typedef struct intset {
-    // 编码方式
+    // Encoding method
     uint32_t encoding;
-    // 集合包含的元素数量
+    // Number of elements in the set
     uint32_t length;
-    // 保存元素的数组
+    // Array for storing elements
     int8_t contents[];
 } intset;
 ```
-contents[] : 虽然content的类型定义成int8_t的，但是contents[]真正的类型是由encoding决定。并且contents[]中的数字都是按照从小到大顺序排列的。
 
-### 整数集合的升级
-当需要向contents[]中新增数字(<最小的数||>最大的数)时，需要为整数集合进行升级操作，升级操作不光包含contents[]长度的扩大还包括encoding编码类型的变更。
+contents[]: Although the type of content is defined as int8_t, the actual type of contents[] is determined by encoding. And the numbers in contents[] are arranged from smallest to largest.
 
-### 整数集合升级的步骤
-根据新增数字的类型，扩展整数集合底层的内存空间，并未新增数据分配空间
-将原有的整数集合都转换成新数字的相同的类型，并且原有的从小到大的顺序不变
-将新数字添加到整数集合中
+### Integer Set Upgrade
 
-### 整数集合的降级
-不支持。
+When adding numbers to contents[] (< the smallest number || > the largest number), an upgrade operation needs to be performed on the integer set. The upgrade operation includes not only expanding the length of contents[] but also changing the encoding type.
 
-### 整数集合的优点
-- 存储不同类型的整型，灵活
-- 节约内存空间
+### Steps for Integer Set Upgrade
+
+- Expand the underlying memory space of the integer set according to the type of the new number, and allocate space for the new data
+- Convert all original integers in the set to the same type as the new number, maintaining the original smallest-to-largest order
+- Add the new number to the integer set
+
+### Integer Set Downgrade
+
+Not supported.
+
+### Advantages of Integer Set
+
+- Store different types of integers flexibly
+- Save memory space
 
 
 ## Map
 
-字典在Redis中的实现相当广泛，比如Redis数据库中的增删改查底层就是通过字典实现的。
+Dictionaries are used extensively in Redis. For example, the underlying implementation of adding, deleting, modifying, and querying in Redis database is achieved through dictionaries.
 
 ```
 127.0.0.1:6379> set name "xuwenzhi"
 OK
 ```
 
-比如此例子中的name和"xuwenzhi"这一个键值对的映射就是通过字典实现的。
+For example, the mapping of the key-value pair "name" and "xuwenzhi" in this example is implemented through a dictionary.
 
-### 字典的实现
-Redis字典的底层实现使用了Hash表。
+### Dictionary Implementation
+
+The underlying implementation of Redis dictionary uses a hash table.
+
 ```c
 dict.h/dictht
 /*
- * 哈希表
- * 每个字典都使用两个哈希表，从而实现渐进式 rehash 。
+ * Hash table
+ * Each dictionary uses two hash tables for progressive rehash.
  */
 typedef struct dictht {
-    // 哈希表数组
+    // Hash table array
     dictEntry **table;
-    // 哈希表大小
+    // Hash table size
     unsigned long size;
-    // 哈希表大小掩码，用于计算索引值
-    // 总是等于 size - 1
+    // Hash table size mask for calculating index values
+    // Always equals size - 1
     unsigned long sizemask;
-    // 该哈希表已有节点的数量
+    // Number of existing nodes in this hash table
     unsigned long used;
 } dictht;
 ```
-再看其中的table，table的类型为一个dictEntry。
+
+Looking at the table, its type is a dictEntry.
+
 ```c
 dict.h/dictEntry
 /*
- * 哈希表节点
+ * Hash table node
  */
 typedef struct dictEntry {
-    // 键
+    // Key
     void *key;
-    // 值
+    // Value
     union {
         void *val;
         uint64_t u64;
         int64_t s64;
     } v;
-    // 指向下个哈希表节点，形成链表
+    // Pointer to next hash table node, forming a linked list
     struct dictEntry *next;
 } dictEntry;
 ```
-其中的key即为字典的Key，v则为字典的Value。
 
-字典的结构
+Where key is the dictionary key, and v is the dictionary value.
+
+Dictionary Structure
+
 ```c
 dict.h/dict
 /*
- * 字典
+ * Dictionary
  */
 typedef struct dict {
-    // 类型特定函数
+    // Type-specific functions
     dictType *type;
-    // 私有数据
+    // Private data
     void *privdata;
-    // 哈希表
+    // Hash table
     dictht ht[2];
-    // rehash 索引
-    // 当 rehash 不在进行时，值为 -1
+    // Rehash index
+    // When rehash is not in progress, value is -1
     int rehashidx; /* rehashing not in progress if rehashidx == -1 */
-    // 目前正在运行的安全迭代器的数量
+    // Number of safe iterators currently running
     int iterators; /* number of iterators currently running */
 } dict;
 ```
-type:为dictType类型，表示该字典的类型，Redis会为不同类型的字典设置不同的字典操作函数等。而privdata保存了传递给不同操作函数的数据。
-ht:ht指向了一个dictht hash表。大小为2，一般使用h[0]，h[1]为备用，主要用于rehash。
-rehashidx:为rehash的状态，当为-1时，表示当前没有进行rehash。
+
+type: Of dictType type, indicates the dictionary type. Redis sets different dictionary operation functions for different types of dictionaries. privdata stores data passed to different operation functions.
+
+ht: Points to a dictht hash table. Size is 2; ht[0] is generally used, ht[1] is backup, mainly for rehash.
+
+rehashidx: Rehash status. When -1, indicates no rehash is currently in progress.
 
 ```c
 dict.h/dictType
 /*
- * 字典类型特定函数
+ * Dictionary type-specific functions
  */
 typedef struct dictType {
-    // 计算哈希值的函数
+    // Function to calculate hash value
     unsigned int (*hashFunction)(const void *key);
-    // 复制键的函数
+    // Function to copy key
     void *(*keyDup)(void *privdata, const void *key);
-    // 复制值的函数
+    // Function to copy value
     void *(*valDup)(void *privdata, const void *obj);
-    // 对比键的函数
+    // Function to compare keys
     int (*keyCompare)(void *privdata, const void *key1, const void *key2);
-    // 销毁键的函数
+    // Function to destroy key
     void (*keyDestructor)(void *privdata, void *key);
-    // 销毁值的函数
+    // Function to destroy value
     void (*valDestructor)(void *privdata, void *obj);
 } dictType;
 ```
 
-Hash算法
-哈希值的计算: 确定是哪张hash表dictEntry
-//计算键key的hash值
+Hash Algorithm
+
+Calculating hash value: Determine which hash table dictEntry
+
 ```c
+// Calculate hash value of key
 hash = dict->type->hashFunction(key);
 ```
-索引值的计算: 确定是dictEntry中的哪个索引值
-index = hash & dict->ht[x].sizemask;
-x根据情况为0或1。
 
-### 解决Hash冲突
-Redis的hash冲突解决办法为链地址法，当新的key与已有的key冲突时，则在原有的key基础上通过dictEntry.next指针链接上。
+Calculating index value: Determine which index in dictEntry
+
+```c
+index = hash & dict->ht[x].sizemask;
+```
+
+x is 0 or 1 depending on the situation.
+
+### Resolving Hash Collisions
+
+Redis's hash collision resolution method is chaining. When a new key conflicts with an existing key, it's linked through the dictEntry.next pointer on top of the original key.
 
 
 ### Rehash
-当然通过原有的解决冲突方案可能会导致dictEntry的链接越来越长，如果超过了哈希表的负载因子(load factor)，那么就需要Rehash登场，也就是ht[1]要登场了。
+
+Of course, the original collision resolution scheme may cause the dictEntry chain to become longer and longer. If it exceeds the hash table's load factor, then Rehash comes into play, meaning ht[1] needs to come on stage.
+
+```
 load factor = ht[0].used / ht[0].size
+```
 
-### 如何进行Rehash
-为ht[1]分配空间:至于分配多大取决于ht[0].used的大小
-将保存在ht[0]上的所有的键值对重新计算hash值保存在ht[1]上
-释放ht[0]，将ht[1]设置为ht[0]，然后重新生成ht[1](此时ht[1]为NULL)，为下一次rehash做准备
+### How to Perform Rehash
 
-### Hash表的收缩与扩展
-##### 什么时候扩展?
-当服务器当前没有在执行BGSAVE或者BGREWRITEAOF时，并且负载因子>1
-当服务器当前正在执行BGSAVE或者BGREWRITEAOF时，并且负载因子>5
-什么时候收缩?
-当Hash表的负载因子<0.1时，自动收缩
+- Allocate space for ht[1]: How much to allocate depends on the size of ht[0].used
+- Recalculate hash values for all key-value pairs stored in ht[0] and save them in ht[1]
+- Release ht[0], set ht[1] as ht[0], then regenerate ht[1] (ht[1] is NULL at this point), preparing for the next rehash
 
-##### Rehash是渐进式的
-也就是说在Rehash过程中，ht[0]并不会一下子就转移到ht[1]中，而是渐进式的。
-在Rehash过程中，rehashidx起到了很重要的作用，详细的步骤为:
-为ht[1]分配空间
-将rehashidx置为0，代表rehash开始
-随着渐进式的rehash过程中，会更改rehashidx为当前rehash的key值
-不知不觉rehashidx变为-1，表示rehash完成。
+### Hash Table Shrinking and Expansion
+
+##### When to Expand?
+
+- When the server is not currently executing BGSAVE or BGREWRITEAOF, and load factor > 1
+- When the server is currently executing BGSAVE or BGREWRITEAOF, and load factor > 5
+
+##### When to Shrink?
+
+- When the hash table's load factor < 0.1, automatic shrinking occurs
+
+##### Rehash is Progressive
+
+This means during the Rehash process, ht[0] doesn't transfer to ht[1] all at once, but progressively.
+
+During the Rehash process, rehashidx plays an important role. The detailed steps are:
+
+- Allocate space for ht[1]
+- Set rehashidx to 0, indicating rehash has started
+- During the progressive rehash process, rehashidx is updated to the current key value being rehashed
+- Before you know it, rehashidx becomes -1, indicating rehash is complete
 
 
 
 ## Skip List
 
-跳跃表是一种有序的数据结构，通过在每个节点中保存多个指向其他节点的指针以达到快速访问的目的。
-时间复杂度 : 平均O(logN), 最坏O(N)
+A skip list is an ordered data structure that achieves fast access by maintaining multiple pointers to other nodes in each node.
+
+Time Complexity: Average O(logN), Worst O(N)
 
 ![http://img.xuwenzhi.com/tiaoyuebiao.jpg](http://img.xuwenzhi.com/tiaoyuebiao.jpg)
 
-在Redis中，跳跃表主要用于实现有序集合键和集群节点中用作内部数据结构。
+In Redis, skip lists are mainly used to implement sorted set keys and as internal data structures in cluster nodes.
 
-图中的第一个节点包含L(1->32)，通过跳跃表节点zskiplistNode.level[0-32]标记。而水平方向的L1->L1->L1...则是通过跳跃表节点zskiplistNode中的前进指针(forward)实现的。
+The first node in the diagram contains L(1->32), marked by zskiplistNode.level[0-32]. The horizontal direction L1->L1->L1... is implemented through the forward pointer in zskiplistNode.
 
-层 : 在这里的层的概念是，图中L1->L1->L1意为一层，L2->L2->L2->L2意为一层。
-跨度(span) : 比如图中的L1->L1是相连的，跨度就为1；而L5->L5跨度为3。
-长度(length) : 如图中，最长的L1->L1->L1->L1，最长的长度为3(忽略表头结点)。
-BW(backward) : 指向上一个节点的指针。
-score : 各个节点的分值，如1.0 2.0 3.0等，节点按分值从小到大排列。
+Level: The concept of level here is that L1->L1->L1 in the diagram represents one level, L2->L2->L2->L2 represents another level.
 
-zskiplistNode主要用于存储跳跃表节点。
+Span: For example, L1->L1 in the diagram are connected, span is 1; L5->L5 span is 3.
+
+Length: As in the diagram, the longest L1->L1->L1->L1, the longest length is 3 (ignoring the header node).
+
+BW (backward): Pointer to the previous node.
+
+score: Scores of each node, like 1.0, 2.0, 3.0, etc. Nodes are arranged from smallest to largest score.
+
+zskiplistNode is mainly used to store skip list nodes.
 
 ```c
 //redis.h/zskiplistNode
 /*
- * 跳跃表节点
+ * Skip list node
  */
 typedef struct zskiplistNode {
-    // 成员对象，可见是一个redis对象
+    // Member object, visible as a redis object
     robj *obj;
-    // 分值
+    // Score
     double score;
-    // 后退指针
+    // Backward pointer
     struct zskiplistNode *backward;
-    // 层
+    // Level
     struct zskiplistLevel {
-        // 前进指针
+        // Forward pointer
         struct zskiplistNode *forward;
-        // 跨度
+        // Span
         unsigned int span;
     } level[];
 } zskiplistNode;
 ```
-zskiplist主要记录跳跃表节点的相关信息
+
+zskiplist mainly records information about skip list nodes
+
 ```c
 //redis.h/zskiplist
 /*
- * 跳跃表
+ * Skip list
  */
 typedef struct zskiplist {
-    // 表头节点和表尾节点
+    // Header and tail nodes
     struct zskiplistNode *header, *tail;
-    // 表中节点的数量
+    // Number of nodes in the table
     unsigned long length;
-    // 表中层数最大的节点的层数
+    // Level count of the node with most levels
     int level;
 } zskiplist;
 ```
@@ -413,34 +466,37 @@ typedef struct zskiplist {
 
 ## redisServer
 
-### 服务中的数据库
-Redis的所有数据库信息都保存在redis.h/redisServer结构中，每一个数据库节点由redis.h/redisDb结构定义。
+### Databases in the Server
+
+All database information in Redis is stored in the redis.h/redisServer structure. Each database node is defined by the redis.h/redisDb structure.
 
 ```c
 //redis.h/redisDb
 typedef struct redisDb {
-    // 数据库键空间，保存着数据库中的所有键值对
+    // Database key space, stores all key-value pairs in the database
     dict *dict;                 /* The keyspace for this DB */
-    // 键的过期时间，字典的键为键，字典的值为过期事件 UNIX 时间戳
+    // Key expiration times, dictionary key is the key, dictionary value is expiration time UNIX timestamp
     dict *expires;              /* Timeout of keys with a timeout set */
-    // 正处于阻塞状态的键
+    // Keys currently in blocking state
     dict *blocking_keys;        /* Keys with clients waiting for data (BLPOP) */
-    // 可以解除阻塞的键
+    // Keys that can unblock
     dict *ready_keys;           /* Blocked keys that received a PUSH */
-    // 正在被 WATCH 命令监视的键
+    // Keys being watched by WATCH command
     dict *watched_keys;         /* WATCHED keys for MULTI/EXEC CAS */
     struct evictionPoolEntry *eviction_pool;    /* Eviction pool of keys */
-    // 数据库号码
+    // Database number
     int id;                     /* Database ID */
-    // 数据库的键的平均 TTL ，统计信息
+    // Average TTL of database keys, statistical information
     long long avg_ttl;          /* Average TTL, just for stats */
 } redisDb;
 ```
-在服务器启动时，Redis通过redis.h/redisServer中定义的dbnum数量来初始化数据库的数量，默认为16个数据库。
+
+When the server starts, Redis initializes the number of databases according to the dbnum quantity defined in redis.h/redisServer. The default is 16 databases.
+
 ```c
 /* Static server configuration */
 // ...
-#define REDIS_DEFAULT_DBNUM     16  /*默认的数据库数量*/
+#define REDIS_DEFAULT_DBNUM     16  /* Default number of databases */
 // ...
 //redis.h/redisServer
 struct redisServer {
@@ -448,8 +504,11 @@ struct redisServer {
     int dbnum;
 }
 ```
-切换数据库
-Redis默认使用第0个数据库，还可以通过 SELECT n，来切换数据库。
+
+Switching Databases
+
+Redis uses database 0 by default. You can also switch databases using SELECT n.
+
 ```
 127.0.0.1:6379> SELECT 1
 OK
@@ -461,31 +520,36 @@ OK
 "xuwenzhi"
 ```
 
-SELECT的实现原理
-由于Redis中定义了客户端结构体，里面存储了当前正在使用的数据库节点的指针，所以通过SELECT进行切换数据库的时候，只需改变指针即可。
+SELECT Implementation Principle
+
+Since Redis defines a client structure that stores a pointer to the currently used database node, switching databases with SELECT only requires changing the pointer.
+
 ```c
 //redis.h/redisClient
 typedef struct redisClient {
     //...
-    // 当前正在使用的数据库的 id （号码）
+    // ID (number) of the currently used database
     int dictid;
     //...
 }
 ```
 
-### 数据库的键空间
-Redis将数据库中所有的键值对保存在了redis.h/redisDb.dict字典中，叫这个字典为"键空间"。键空间的键就是一个字符串对象，键空间的值都可以是任意的Redis对象(字符串、列表、哈希、集合和有序集合)。
-所以所做的SET、GET、DEL的该命令实际上是在做数据库的增删改查而已。
+### Database Key Space
 
-### 其他数据库操作命令
-FLUSHDB : 顾名思义，清空数据库，也就是通过删除键空间来实现
-RANDOMKEY : 随机返回键空间的某个键
-DBSIZE : 返回键空间键值对的数量
-EXISTS : 是否存在某个键
-RENAME : 对键重命名
-KEYS   : 返回所有的键
-EXPIRE : 设置某个key的过期时间
-TTL    : 返回某个key的过期时间
+Redis stores all key-value pairs in the database in the redis.h/redisDb.dict dictionary, called the "key space." Keys in the key space are string objects, and values can be any Redis object (string, list, hash, set, and sorted set).
+
+So operations like SET, GET, DEL are actually just adding, deleting, modifying, and querying the database.
+
+### Other Database Operation Commands
+
+- FLUSHDB: As the name suggests, clears the database by deleting the key space
+- RANDOMKEY: Randomly returns a key from the key space
+- DBSIZE: Returns the number of key-value pairs in the key space
+- EXISTS: Whether a key exists
+- RENAME: Rename a key
+- KEYS: Return all keys
+- EXPIRE: Set expiration time for a key
+- TTL: Return expiration time of a key
 
 ```bash
 127.0.0.1:6379> RANDOMKEY
@@ -506,34 +570,35 @@ TTL    : 返回某个key的过期时间
 ```
 
 
-### 通常的过期键删除策略
-定时删除 : 每个键都有个贴身timer，一过期的时候就删除。要为所有的键建立定时器，太占用CPU资源，不可取。
-惰性删除 : 不做任何检查，当做GET操作时，发现键过期就删除。对内存来说不够友好，有可能长时间不用的键值对还长时间的保留在内存中，可能发生内存泄露。
-定期删除 : 每隔一段时间，对键空间检查，过期就删除。难点在于定期这个周期是多少，可能无法保证数据的一致性。
-·
+### Common Expired Key Deletion Strategies
 
-### Redis的过期删除策略
-- 惰性删除+定期删除
+- Timed Deletion: Each key has a dedicated timer that deletes it immediately upon expiration. Building timers for all keys consumes too much CPU resources. Not feasible.
+- Lazy Deletion: No checking is done. When a GET operation discovers a key has expired, it's deleted. Not memory-friendly because long-unused key-value pairs may remain in memory for a long time, potentially causing memory leaks.
+- Periodic Deletion: Periodically check the key space and delete expired keys. The difficulty lies in determining the periodic interval, which may not guarantee data consistency.
 
-##### 惰性删除
+### Redis Expired Key Deletion Strategy
+
+- Lazy Deletion + Periodic Deletion
+
+##### Lazy Deletion
 
 ```c
 //db.c/expireIfNeeded
 /*
- * 检查 key 是否已经过期，如果是的话，将它从数据库中删除。
+ * Check if key has expired, if so, delete it from the database.
  *
- * 返回 0 表示键没有过期时间，或者键未过期。
+ * Returns 0 if key has no expiration time, or key has not expired.
  *
- * 返回 1 表示键已经因为过期而被删除了。
+ * Returns 1 if key was deleted due to expiration.
  */
 int expireIfNeeded(redisDb *db, robj *key) {
-    // 取出键的过期时间
+    // Get key expiration time
     mstime_t when = getExpire(db,key);
     mstime_t now;
-    // 没有过期时间
+    // No expiration time
     if (when < 0) return 0; /* No expire for this key */
     /* Don't expire anything while loading. It will be done later. */
-    // 如果服务器正在进行载入，那么不进行任何过期检查
+    // If server is loading, don't perform any expiration check
     if (server.loading) return 0;
     /* If we are in the context of a Lua script, we claim that time is
      * blocked to when the Lua script started. This way a key can expire
@@ -548,67 +613,70 @@ int expireIfNeeded(redisDb *db, robj *key) {
      * Still we try to return the right information to the caller,
      * that is, 0 if we think the key should be still valid, 1 if
      * we think the key is expired at this time. */
-    // 当服务器运行在 replication 模式时
-    // 附属节点并不主动删除 key
-    // 它只返回一个逻辑上正确的返回值
-    // 真正的删除操作要等待主节点发来删除命令时才执行
-    // 从而保证数据的同步
+    // When server is running in replication mode
+    // Slave nodes don't actively delete keys
+    // They only return logically correct return values
+    // Actual deletion waits for DELETE command from master
+    // To ensure data synchronization
     if (server.masterhost != NULL) return now > when;
-    // 运行到这里，表示键带有过期时间，并且服务器为主节点
+    // Running here means key has expiration time and server is master
     /* Return when this key has not expired */
-    // 如果未过期，返回 0
+    // If not expired, return 0
     if (now <= when) return 0;
     /* Delete the key */
     server.stat_expiredkeys++;
-    // 向 AOF 文件和附属节点传播过期信息
+    // Propagate expiration info to AOF and slave nodes
     propagateExpire(db,key);
-    // 发送事件通知
+    // Send event notification
     notifyKeyspaceEvent(REDIS_NOTIFY_EXPIRED,
         "expired",key,db->id);
-    // 将过期键从数据库中删除
+    // Delete expired key from database
     return dbDelete(db,key);
 }
 ```
-##### 定期删除
-Redis的服务器周期性操作redis.c/serverCron时，会调用activeExpireCycle。在规定的时间内，分多次遍历服务器中的各个数据库，从数据库中的expires字典中随机检查一部分键的过期键。
+
+##### Periodic Deletion
+
+Redis's server periodic operation redis.c/serverCron calls activeExpireCycle. Within a specified time, it iterates through various databases in the server multiple times, randomly checking a portion of keys from the expires dictionary of each database.
+
 ```c
 void activeExpireCycle(int type) {
     /* This function has some global state in order to continue the work
      * incrementally across calls. */
-    // 静态变量，用来累积函数连续执行时的数据
+    // Static variables for accumulating data across consecutive executions
     static unsigned int current_db = 0; /* Last DB tested. */
     static int timelimit_exit = 0;      /* Time limit hit in previous call? */
     static long long last_fast_cycle = 0; /* When last fast cycle ran. */
     unsigned int j, iteration = 0;
-    // 默认每次处理的数据库数量
+    // Default number of databases to process each time
     unsigned int dbs_per_call = REDIS_DBCRON_DBS_PER_CALL;
-    // 函数开始的时间
+    // Function start time
     long long start = ustime(), timelimit;
-    // 快速模式
+    // Fast mode
     if (type == ACTIVE_EXPIRE_CYCLE_FAST) {
         /* Don't start a fast cycle if the previous cycle did not exited
          * for time limt. Also don't repeat a fast cycle for the same period
          * as the fast cycle total duration itself. */
-        // 如果上次函数没有触发 timelimit_exit ，那么不执行处理
+        // If last function didn't trigger timelimit_exit, don't process
         if (!timelimit_exit) return;
-        // 如果距离上次执行未够一定时间，那么不执行处理
+        // If not enough time since last execution, don't process
         if (start < last_fast_cycle + ACTIVE_EXPIRE_CYCLE_FAST_DURATION*2) return;
-        // 运行到这里，说明执行快速处理，记录当前时间
+        // Running here means executing fast processing, record current time
         last_fast_cycle = start;
     }
     /* We usually should test REDIS_DBCRON_DBS_PER_CALL per iteration, with
      * two exceptions:
      *
-     * 一般情况下，函数只处理 REDIS_DBCRON_DBS_PER_CALL 个数据库，
-     * 除非：
+     * Normally, function only processes REDIS_DBCRON_DBS_PER_CALL databases,
+     * except:
      *
      * 1) Don't test more DBs than we have.
-     *    当前数据库的数量小于 REDIS_DBCRON_DBS_PER_CALL
+     *    Current number of databases is less than REDIS_DBCRON_DBS_PER_CALL
      * 2) If last time we hit the time limit, we want to scan all DBs
      * in this iteration, as there is work to do in some DB and we don't want
      * expired keys to use memory for too much time.
-     *     如果上次处理遇到了时间上限，那么这次需要对所有数据库进行扫描，
-     *     这可以避免过多的过期键占用空间
+     *     If last processing hit time limit, need to scan all databases,
+     *     to avoid too many expired keys taking up space
      */
     if (dbs_per_call > server.dbnum || timelimit_exit)
         dbs_per_call = server.dbnum;
@@ -616,26 +684,26 @@ void activeExpireCycle(int type) {
      * per iteration. Since this function gets called with a frequency of
      * server.hz times per second, the following is the max amount of
      * microseconds we can spend in this function. */
-    // 函数处理的微秒时间上限
-    // ACTIVE_EXPIRE_CYCLE_SLOW_TIME_PERC 默认为 25 ，也即是 25 % 的 CPU 时间
+    // Function processing microsecond time limit
+    // ACTIVE_EXPIRE_CYCLE_SLOW_TIME_PERC defaults to 25, meaning 25% CPU time
     timelimit = 1000000*ACTIVE_EXPIRE_CYCLE_SLOW_TIME_PERC/server.hz/100;
     timelimit_exit = 0;
     if (timelimit <= 0) timelimit = 1;
-    // 如果是运行在快速模式之下
-    // 那么最多只能运行 FAST_DURATION 微秒
-    // 默认值为 1000 （微秒）
+    // If running in fast mode
+    // Can only run for at most FAST_DURATION microseconds
+    // Default value is 1000 (microseconds)
     if (type == ACTIVE_EXPIRE_CYCLE_FAST)
         timelimit = ACTIVE_EXPIRE_CYCLE_FAST_DURATION; /* in microseconds. */
-    // 遍历数据库
+    // Iterate through databases
     for (j = 0; j < dbs_per_call; j++) {
         int expired;
-        // 指向要处理的数据库
+        // Point to database to process
         redisDb *db = server.db+(current_db % server.dbnum);
         /* Increment the DB now so we are sure if we run out of time
          * in the current DB we'll restart from the next. This allows to
          * distribute the time evenly across DBs. */
-        // 为 DB 计数器加一，如果进入 do 循环之后因为超时而跳出
-        // 那么下次会直接从下个 DB 开始处理
+        // Increment DB counter; if timeout in do loop
+        // Next time will start from next DB
         current_db++;
         /* Continue to expire if at the end of the cycle more than 25%
          * of the keys were expired. */
@@ -644,105 +712,107 @@ void activeExpireCycle(int type) {
             long long now, ttl_sum;
             int ttl_samples;
             /* If there is nothing to expire try next DB ASAP. */
-            // 获取数据库中带过期时间的键的数量
-            // 如果该数量为 0 ，直接跳过这个数据库
+            // Get number of keys with expiration time in database
+            // If count is 0, skip this database
             if ((num = dictSize(db->expires)) == 0) {
                 db->avg_ttl = 0;
                 break;
             }
-            // 获取数据库中键值对的数量
+            // Get number of key-value pairs in database
             slots = dictSlots(db->expires);
-            // 当前时间
+            // Current time
             now = mstime();
             /* When there are less than 1% filled slots getting random
              * keys is expensive, so stop here waiting for better times...
              * The dictionary will be resized asap. */
-            // 这个数据库的使用率低于 1% ，扫描起来太费力了（大部分都会 MISS）
-            // 跳过，等待字典收缩程序运行
+            // This database has less than 1% usage, too expensive to scan (most will MISS)
+            // Skip, wait for dictionary shrink program to run
             if (num && slots > DICT_HT_INITIAL_SIZE &&
                 (num*100/slots < 1)) break;
             /* The main collection cycle. Sample random keys among keys
              * with an expire set, checking for expired ones.
              *
-             * 样本计数器
+             * Sample counter
              */
-            // 已处理过期键计数器
+            // Processed expired key counter
             expired = 0;
-            // 键的总 TTL 计数器
+            // Total key TTL counter
             ttl_sum = 0;
-            // 总共处理的键计数器
+            // Total processed key counter
             ttl_samples = 0;
-            // 每次最多只能检查 LOOKUPS_PER_LOOP 个键
+            // Can only check at most LOOKUPS_PER_LOOP keys each time
             if (num > ACTIVE_EXPIRE_CYCLE_LOOKUPS_PER_LOOP)
                 num = ACTIVE_EXPIRE_CYCLE_LOOKUPS_PER_LOOP;
-            // 开始遍历数据库
+            // Start iterating database
             while (num--) {
                 dictEntry *de;
                 long long ttl;
-                // 从 expires 中随机取出一个带过期时间的键
+                // Randomly get a key with expiration time from expires
                 if ((de = dictGetRandomKey(db->expires)) == NULL) break;
-                // 计算 TTL
+                // Calculate TTL
                 ttl = dictGetSignedIntegerVal(de)-now;
-                // 如果键已经过期，那么删除它，并将 expired 计数器增一
+                // If key has expired, delete it and increment expired counter
                 if (activeExpireCycleTryExpire(db,de,now)) expired++;
                 if (ttl < 0) ttl = 0;
-                // 累积键的 TTL
+                // Accumulate key TTL
                 ttl_sum += ttl;
-                // 累积处理键的个数
+                // Accumulate processed key count
                 ttl_samples++;
             }
             /* Update the average TTL stats for this database. */
-            // 为这个数据库更新平均 TTL 统计数据
+            // Update average TTL statistics for this database
             if (ttl_samples) {
-                // 计算当前平均值
+                // Calculate current average
                 long long avg_ttl = ttl_sum/ttl_samples;
 
-                // 如果这是第一次设置数据库平均 TTL ，那么进行初始化
+                // If this is first time setting database average TTL, initialize
                 if (db->avg_ttl == 0) db->avg_ttl = avg_ttl;
                 /* Smooth the value averaging with the previous one. */
-                // 取数据库的上次平均 TTL 和今次平均 TTL 的平均值
+                // Take average of database's last average TTL and this average TTL
                 db->avg_ttl = (db->avg_ttl+avg_ttl)/2;
             }
             /* We can't block forever here even if there are many keys to
              * expire. So after a given amount of milliseconds return to the
              * caller waiting for the other active expire cycle. */
-            // 我们不能用太长时间处理过期键，
-            // 所以这个函数执行一定时间之后就要返回
-            // 更新遍历次数
+            // Can't spend too much time processing expired keys,
+            // So this function returns after a certain amount of time
+            // Update iteration count
             iteration++;
-            // 每遍历 16 次执行一次
+            // Execute once every 16 iterations
             if ((iteration & 0xf) == 0 && /* check once every 16 iterations. */
                 (ustime()-start) > timelimit)
             {
-                // 如果遍历次数正好是 16 的倍数
-                // 并且遍历的时间超过了 timelimit
-                // 那么断开 timelimit_exit
+                // If iteration count is exactly a multiple of 16
+                // And iteration time exceeded timelimit
+                // Then set timelimit_exit
                 timelimit_exit = 1;
             }
-            // 已经超时了，返回
+            // Already timed out, return
             if (timelimit_exit) return;
             /* We don't repeat the cycle if there are less than 25% of keys
              * found expired in the current DB. */
-            // 如果已删除的过期键占当前总数据库带过期时间的键数量的 25 %
-            // 那么不再遍历
+            // If deleted expired keys are 25% of current total database keys with expiration
+            // Stop iterating
         } while (expired > ACTIVE_EXPIRE_CYCLE_LOOKUPS_PER_LOOP/4);
     }
 }
 ```
 
-### AOF、RDB和复制功能对过期键的处理
+### AOF, RDB and Replication Handling of Expired Keys
 
-- 生成RDB文件
-在使用SAVE或者BGSAVE生成RDB文件时，不会对过期键进行存储
+- Generating RDB File
+When using SAVE or BGSAVE to generate RDB file, expired keys are not stored
 
-- 载入RDB文件
-当服务器以主服务器的形式存在时，载入RDB时，不会对过期键进行载入
-当服务器以从服务器的形式存在时，会将所有键载入
+- Loading RDB File
+When server exists as master, expired keys are not loaded when loading RDB
+When server exists as slave, all keys are loaded
 
 ### AOF
-待定。
 
-### 主从复制
-- 当主服务器删除键时，会向所有从服务器发送DEL命令
-- 当客户端在从服务器上读取数据时，即使发现键过期，也不删除
-- 从服务器只接收来自主服务器的命令
+Pending.
+
+### Master-Slave Replication
+
+- When master deletes a key, it sends DEL command to all slaves
+- When client reads data from slave, even if the key is found to be expired, it's not deleted
+- Slaves only accept commands from master
